<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Post"
        android:icon="@drawable/quill"
        android:title="@string/nav_post" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/birdhouse"
        android:title="@string/nav_phome" />


    <item
        android:id="@+id/Schedule"
        android:icon="@drawable/schedule"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/Chat"
        android:icon="@drawable/message"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/Notice"
        android:icon="@drawable/notice"
        android:title="@string/notice" />



</menu>