<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:gravity="center"
    android:orientation="vertical">




    <!--<ImageView-->
    <!--android:id="@+id/logo_"-->
    <!--android:layout_width="50dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@drawable/logal_smooth_nw" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fingerbird"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="26sp"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="250dp"
        android:background="@drawable/login_bgbox"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="250dp"
        android:background="@drawable/login_bgbox"
        android:ems="10"
        android:hint="@string/login_e"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="250dp"
        android:background="@drawable/login_bgbox"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/login_pwd" />




    <EditText
        android:id="@+id/login_pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="250dp"
        android:background="@drawable/login_bgbox"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/login_pwd2" />

    <ImageButton
        android:id="@+id/btn_signup"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:background="#08FFFFFF"
        android:contentDescription="@string/send"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/enter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorLightWhite"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp">


            <Button
                android:id="@+id/btn_signin"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:background="@drawable/btn_signin_style"
                android:padding="0dp"
                android:text="@string/signin"
                android:textColor="@color/colorLightWhite"
                android:onClick="Onsignup"/>

            <View
                android:id="@+id/underline"
                android:layout_width="48dp"
                android:layout_height="2dp"
                android:background="@color/colorLightWhite"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>