<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:orientation="vertical"
    android:gravity="center_horizontal">


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_keyboard_arrow_left_white"
            android:layout_gravity="left"
            android:onClick="Backsignup"/>



    <!--<ImageView-->
    <!--android:id="@+id/logo_"-->
    <!--android:layout_width="50dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:background="@drawable/logal_smooth_nw"-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fingerbird"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signin"
        android:textSize="26sp"
        android:textColor="@color/colorWhite"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_email"
        android:background="@drawable/login_bgbox"
        android:width="250dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login_e" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="250dp"
        android:background="@drawable/login_bgbox"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/login_pwd" />

    <ImageButton
        android:id="@+id/btn_signup"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:background="#08FFFFFF"
        android:scaleType="fitCenter"
        android:contentDescription="@string/send"
        android:src="@drawable/enter"
        android:onClick="Onsignin"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <View
            android:id="@+id/line1"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/colorLightWhite" />



        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/or_use"
            android:textColor="@color/colorLightWhite"
            android:textStyle="bold" />

        <View
            android:id="@+id/line2"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/colorLightWhite" />

    </LinearLayout>






    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#08FFFFFF"
        android:contentDescription="@string/send2"
        android:scaleType="fitCenter"
        android:src="@drawable/google"
        android:layout_marginTop="16dp"
        android:onClick="OnGoogle" />


</LinearLayout>